Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjBoolObjWrapped.quorum
class main
    action main
        Boolean bool
        bool:setValue(true)
        Number num = bool
    end
end